<resources>
    <string name="app_name">nasizae_edu_pulse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="authentication">Авторизация</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="no_account">Ещё нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="fullname">ФИО</string>
    <string name="have_an_account">У вас есть аккаунт?</string>
    <string name="next">Далее</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="exit_account">Выйти из Аккаунта</string>
    <string name="sittings">Настройки</string>
    <string name="statistic">Статистика</string>
    <string name="personal_library">Личная библиотека</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check">Проверить</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="txt_reset_password">Введите вашу почту для сброса пароля</string>
    <string name="input_fullname">Введите ваше Фамилия Имя</string>
    <string name="input_email">Введите вашу действующую почту</string>
    <string name="input_password">Пароль должен быть не меньше 8 символов</string>
    <string name="task">Задание</string>
</resources>