<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.AuthenticationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/authentication"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_et"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingVertical="16dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_et"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="textPassword"
                android:paddingVertical="16dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_margin="20dp"
            android:backgroundTint="#00FF9800"
            android:textColor="@color/baff"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/baff"
            android:gravity="center"
            android:fontFamily="@font/montserrat_alternates"
            android:paddingVertical="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_alternates"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <TextView
        android:id="@+id/btn_transition_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_alternates"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/no_account"
        app:layout_constraintStart_toStartOf="@id/no_account"
        app:layout_constraintTop_toBottomOf="@id/no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>