<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.auth.RegistrationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_alternates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/grey"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_user"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/image_profile"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_et"
            android:hint="@string/fullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingVertical="16dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_fullname"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_et"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingVertical="16dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_et"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="textPassword"
                android:paddingVertical="16dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/baff"
            android:paddingVertical="16dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:gravity="center"
            android:fontFamily="@font/montserrat_alternates"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="16dp" />
        <TextView
            android:id="@+id/have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_alternates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_transition_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:backgroundTint="#0099BAFF"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>