<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.ui.auth.authentication.forgot_password.reset_password.ResetPasswordFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_reset_password"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_alternates"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_et"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:paddingVertical="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_alternates"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="16dp"
        app:cornerRadius="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/baff"/>
</LinearLayout>