<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".presentation.ui.auth.authentication.forgot_password.ForgotPasswordFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="Введите новый пароль"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_alternates"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_et"
        app:passwordToggleEnabled="true"
        android:hint="@string/new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="textPassword"
            android:paddingVertical="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_alternates"
        android:layout_marginStart="20dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_et"
        android:hint="@string/confirm_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_verify_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="textPassword"
            android:paddingVertical="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_alternates"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="16dp"
        app:cornerRadius="16dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/baff"/>

</LinearLayout>