<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".presentation.ui.sittings.SittingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/sittings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="90dp">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/img_1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_alternates"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="username" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="username" />

    <LinearLayout
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/ic_edit"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/edit_profile"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="56dp"
            android:background="@drawable/ic_arrow_right"
            android:padding="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_java"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/baff"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="Java"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_kotlin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/baff"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="Kotlin"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn"
        android:orientation="horizontal"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/notifications"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="Уведомление"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_natifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="120dp"
            android:checked="true"
            android:padding="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_btn"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/ic_exit"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/exit_account"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="100dp"
            android:background="@drawable/ic_arrow_right"
            android:padding="16dp" />
    </LinearLayout>

</LinearLayout>